# brain_org

./: .gitignore  README.md  config.yaml  pyproject.toml
configs/: atlas_v5.yaml
docs/: HANDOFF_control_atlas.md  annotation_schema.md  atlas_compilation_notes.md  atlas_overview.md  benchmark_pipeline_review.md  data_sources.md  dataset_compilation_prompt.md  handoff_2026-05-20.md  llm_prompt_continue.md  loader_format_reference.md  method_review_2026-05-25.md  prompt_expand_gsm_annotations.md  proposal.md  rebuild_plan_2026-05-17.md  rebuild_plan_2026-05-23.md  snapseed_annotation_guide.md  snapseed_markers_hnocadownload.yaml  v5_outcomes_and_validation.md  worklog_2026-05-25.md
scripts/: _provenance.py  benchmark_metadata_adjusted.py  benchmark_metadata_stratified.py  benchmark_ood_nullcalibrated.py  benchmark_q1_sizecontrol.py  benchmark_q2_clustergate.py  benchmark_q2_clustergate_sweep.py  benchmark_q2_correspondence.py  benchmark_q2_heldout.py  benchmark_q2_markergate.py  benchmark_q3_gaps.py  benchmark_rerun_calibrated.py  braun_label_transfer.py  braun_query_fix_test.py  braun_transfer_calibrated.py  braun_transfer_finalize.py  calibration_ece.py  concatenate_atlas.py  diag_scanvi_collapse.py  eval_integration.py  fetch_hnoca.sh  figure1_integrated_atlas.py  figure2_projection_protocols.py  fix_gse296775_control.py  fix_gse297594_control.py  inject_finalized_annotations.py  make_hnoca_umap.py  make_snapseed_umap.py  membership_diff.py  migrate_to_hnoca_schema.py  patch_obs_annotations.py  poster_panels.py  preprocess_atlas.py  rebuild_atlas.py  regen_manifest.py  (+12 more)
(+22 files in other folders)
